# rust_spectrum_analyse

./: Cargo.toml
myalgorithm/: Cargo.toml
myalgorithm/src/: lib.rs
src/: app.rs  main.rs  spectrum.rs  ui.rs
src/audio/: capture.rs  device.rs  jack_capture.rs  mod.rs
